force-app/main/default/objects/Registration_Form__c/Registration_Form__c.object-meta.xml
<CustomObject>
    <description>Registration form which a student will fill to confirm if will assist to the event.</description>
    <label>Registration Form</label>
    <nameField>
        <label>Registration Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>