force-app/main/default/objects/Registration_Form__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Event which the student have registered for.</description>
    <label>Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Registration Forms</relationshipLabel>
    <relationshipName>Registration_Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>