force-app/main/default/objects/Registration_Form__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <description>Student which have submitted the registration form.</description>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Registration Forms</relationshipLabel>
    <relationshipName>Registration_Forms</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>