force-app/main/default/objects/Registration_Form__c/validationRules/Prevent_Change_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Change_Status</fullName>
    <active>true</active>
    <description>Prevent the user changing the status when &apos;Accepted&apos; has been selected.</description>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE( Registration_Status__c ), &quot;Accepted&quot;) &amp;&amp; NOT(ISPICKVAL(Registration_Status__c , &quot;Accepted&quot;))</errorConditionFormula>
    <errorDisplayField>Registration_Status__c</errorDisplayField>
    <errorMessage>The status has been set to Accepted. To prevent errors, you can&apos;t change it.</errorMessage>
</ValidationRule>